syntax = "proto2";

package aecor.schedule.serialization.protobuf;
option java_package = "aecor.schedule.serialization.protobuf.msg";
option optimize_for = SPEED;

message ScheduleEntryAdded {
  required string scheduleName = 1;
  required string entryId = 2;
  required string correlationId = 3;
  required int64 dueToInEpochMillisUTC = 4;
}

message ScheduleEntryFired {
  required string scheduleName = 1;
  required string entryId = 2;
  required string correlationId = 3;
}